# combadge

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yml  mkdocs.yml  pyproject.toml  renovate.json
.github/: release.yml
.github/workflows/: check.yaml  docs.yml  publish.yml
combadge/: __init__.py  binder.py  decorators.py  interfaces.py  response.py
combadge/_helpers/: dataclasses.py  pydantic.py  typing.py
combadge/core/: backend.py  binder.py  container.py  errors.py  interfaces.py  mark.py  markers.py  request.py  response.py  service.py  signature.py  typevars.py  warnings.py
combadge/core/mark/: __init__.py  method.py  parameter.py  response.py
combadge/core/markers/: __init__.py  base.py  method.py  parameter.py  response.py
combadge/support/: __init__.py  abc.py  common.py  di.py  marks.py
combadge/support/common/: __init__.py  response.py
combadge/support/http/: __init__.py  abc.py  aliases.py  headers.py  markers.py  marks.py  request.py  response.py
combadge/support/http/abc/: __init__.py  containers.py  interfaces.py  request.py  response.py
combadge/support/http/markers/: __init__.py  implementation.py  request.py  response.py  shortcuts.py
combadge/support/httpx/: __init__.py  response.py
combadge/support/httpx/backends/: async_.py  base.py  sync.py
combadge/support/rest/: __init__.py  abc.py  markers.py  marks.py  request.py
combadge/support/shared/: async_.py  contextlib.py  request.py  sync.py
combadge/support/soap/: __init__.py  abc.py  decorators.py  markers.py  marks.py  request.py  response.py
combadge/support/soap/markers/: __init__.py  implementation.py  shortcuts.py
combadge/support/zeep/: __init__.py  backends.py  response.py
combadge/support/zeep/backends/: async_.py  base.py  sync.py
combadge/zeep/: backends.py  response.py
docs/: core-concepts.md  extending.md  getting-started.md  how-it-works.md  index.md  tags.md
docs/cookbook/: capturing-http-status-code.md  do-not-repeat-response-annotations.md  fields-for-simple-requests.md  parameter-validation.md  using-field-for-simple-requests.md
docs/core/: binding.md  exceptions.md  service-container.md  service-protocol.md
docs/core-concepts/: handling-errors.md
docs/core/markers/: index.md  method.md  parameter.md  response.md
docs/getting-started/: binding.md  handling-errors.md
docs/migration/: v5.md
docs/support/: configuration.md  cookbook.md  core.md  di.md  handling-errors.md  http.md  httpx.md  pkgsettings.md  pydantic.md  rest.md  soap.md  zeep.md
docs/support/backends/: httpx.md  index.md  zeep.md
docs/support/core/: method-markers.md  response-markers.md
docs/support/models/: errors.md  index.md
docs/usage/: binding.md  cookbook.md  errors.md  markers.md  models.md
tests/: conftest.py  test_binder.py  test_integration.py  test_nothing.py  test_response.py
tests/core/: test_binder.py  test_errors.py  test_mark.py  test_markers.py  test_response.py  test_signature.py
tests/core/markers/: test_base.py  test_method.py  test_parameter.py  test_response.py
tests/helpers/: test_typing.py
tests/integration/: test_country_info_service.py  test_docs.py  test_httpbin.py  test_number_conversion.py  test_readme.py  test_weather.py
tests/integration/cassettes/test_country_info_service/: test_happy_path.yaml
tests/integration/cassettes/test_docs/: test_documentation_snippet[docs-cookbook-capturing-http-status-code.md#status_code.py].yaml  test_documentation_snippet[docs-support-di.md#dependency_injection.py].yaml  test_documentation_snippet[docs-support-models.md#builtin.py].yaml  test_documentation_snippet[docs-support-models.md#dataclasses.py].yaml  test_documentation_snippet[docs-support-models.md#typed_dict.py].yaml  test_documentation_snippet[docs-support-rest.md#json_field.py].yaml  test_documentation_snippet[docs-usage-cookbook.md#field.py].yaml  test_documentation_snippet[docs-usage-cookbook.md#status_code.py].yaml  test_documentation_snippet[docs-usage-models.md#dataclasses.py].yaml  test_documentation_snippet[docs-usage-models.md#non_dict.py].yaml  test_documentation_snippet[docs-usage-models.md#typed_dict.py].yaml
tests/integration/cassettes/test_httpbin/: test_callback_protocol.yaml  test_form_data.yaml  test_headers_async.yaml  test_headers_sync.yaml  test_non_dict_json.yaml  test_query_params.yaml  test_reraise_backend_error.yaml
tests/integration/cassettes/test_number_conversion/: test_happy_path_scalar_response.yaml  test_happy_path_scalar_response_async.yaml  test_happy_path_with_params.yaml  test_happy_path_with_params_async.yaml  test_happy_path_with_params_async[service0].yaml  test_happy_path_with_params_async[service1].yaml  test_happy_path_with_params_sync[service1].yaml  test_sad_path_scalar_response.yaml  test_sad_path_web_fault.yaml
tests/integration/cassettes/test_readme/: test_code_block[quickstart_httpx].yaml  test_code_block[test_quickstart].yaml
tests/integration/cassettes/test_weather/: test_weather_async.yaml  test_weather_sync.yaml
tests/support/: test_common.py  test_di.py
tests/support/http/: test_markers.py  test_marks.py
tests/support/httpx/backends/: test_base.py
tests/support/rest/: test_marks.py
tests/support/zeep/backends/: test_base.py
